--- a/gb/23/1/28/n13917377.md
+++ b/gb/23/1/28/n13917377.md
@@ -15,7 +15,7 @@
 <p>藤岛裕二赞叹神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>的精致美丽，特别是女子舞蹈，“她们的动作是那么的优雅，让人印象深刻，还有她们的美丽服饰等等，那种统一感令人惊叹。”</p>
 <p>他表示，神韵音乐家“唱得很动人，那个男中音的声音非常有张力，很棒。”</p>
 <p>神韵致力于恢复中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>，藤岛裕二表示之前对中国的传统还有很多不解之处，“但是，看到今天演出呈现的故事，很自然地展现了中国的传统文化内涵，不需什么特别说明，看完演出就都明白了。”他赞叹神韵完美的舞台表达效果。</p>
-<p>他钦佩神恢复<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>的努力，“希望将这种做法不断地扩大推广。”</p>
+<p>他钦佩神韵恢复<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>的努力，“希望将这种做法不断地扩大推广。”</p>
 <p>责任编辑：李沐恩</p>
 	
 <hr>
@@ -32,31 +32,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/11/n10134371.md#1" target="_blank">中共反对提倡“礼义廉耻”的新生活运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/26/n11411173.md#1" target="_blank">美国会点名要求中共释放左洪涛 纽约声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903795.md#1">神仙故事：明朝人奇遇王重阳，学剑仙之术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916897.md#1">【环球直击】中国卫星公司暗助俄罗斯 被美制裁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916973.md#1">【未解之谜】神奇的测字</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917204.md#1">【马克时空】美德军援主战坦克 乌克兰何时才能扭转战局？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/25/n13915199.md#1">【独家】中共内部文件泄染疫死亡数据秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915917.md#1">中共国务院人事大洗牌 分析：团派遭深度打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915914.md#1">谷歌地图全球十大热搜文化景点 台湾两地上榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916993.md#1">金钟视帝丁强惊传初六骤世 经纪人证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916305.md#1">周星驰晒写春联视频 贾静雯率先抽中墨宝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916107.md#1">妻怀上二胎 杨祐宁晒超音波照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916063.md#1">柯佳嬿与许光汉、施柏宇访韩 宣传《想见你》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916240.md#1">林志玲戴粉嫩兔耳拜年 21秒影片泄冻龄状态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915759.md#1">传染病专家：中共两大官方新冠数据矛盾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910160.md#1">每天喝2杯咖啡会增加死亡风险吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911063.md#1">姜汁柠檬水可暖身减肥 但一类人不适合</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915841.md#1">地中海饮食：六度蝉联最佳饮食方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/25/n13915476.md#1">血管及舌头发硬或为脑梗先兆 预防脑梗五妙招</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/28/n13917377.htm">销售主管：神韵展现传统文化 内涵深远而易懂</a></p><hr>
