--- a/gb/23/1/29/n13917872.md
+++ b/gb/23/1/29/n13917872.md
@@ -24,7 +24,7 @@
 <p>Jamat表示，她觉得神韵歌唱家很棒。“歌唱家身材纤细，但是有好大的声量，这令人吃惊。”她表示，歌词也代表了人类的普世价值以及造物主的慈悲。</p>
 <p>Reinhart也跟着说，“我们也很喜欢歌曲，喜欢（歌词）带着信仰色彩。”他表示，这是跟“真、善、忍”相关的内容，跟他们的信仰内涵也是相通的。</p>
 <p>Reinhart夫妇第一次看到二胡独奏就喜欢上了。Jamat对二胡感到很神奇，她说此前从来没有近距离看到过二胡，只是在图片上见过。Reinhart说，二胡演奏“太神奇了，音色很美。”</p>
-<p>对神韵演出中反应当代中国的舞剧，Jamat谈道，“神韵有权利走出来、展现中国正在发生的事情。中国正在发生的这些（迫害信仰的）事情很糟糕。”她说，“我不知道世界上其他国家是否真的意识到，（中共）到底有多糟糕。”</p>
+<p>对神韵演出中反应当代中国的舞剧，Jamat谈道，“神韵有权利走出来、展现中国正在发生的事情。中国正在发生的这些（迫害信仰的）事情很糟糕。”她说，“我不知道世界上其它国家是否真的意识到，（中共）到底有多糟糕。”</p>
 <p>神韵艺术团的宗旨是复兴中国传统文化。Reinhart夫妇很赞赏这一点。Jamat还提到中国上个世纪70年代的文化大革命，认为它破坏掉了中国的传统文化。</p>
 <p>“我不会去中国。我知道很多美国人都会去中国看长城和所有这些。我也很想去，但我不会去。”她表示，要等到共产主义在中国消失了，她才会去中国。</p>
 <p>“到时候庆祝。”Reinhart补充说。最后Reinhart夫妇在表示，他们想对神韵演员说，“祝贺你们做得这么棒。”</p>
@@ -53,31 +53,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/3/n10021983.md#1" target="_blank">杨宁：官司风波再起 红色舞剧洗脑没商量</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261439.md#1" target="_blank">从死神手里夺回来的生命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/9/n10204699.md#1" target="_blank">古玉文：消灭私有制不是出路（中）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/24/n10509014.md#1" target="_blank">驱除共产 回归传统 华府万人传递希望</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914722.md#1">濒死女子见到前世与未来景象 了解人生目的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906660.md#1">悟空为何能得“长生”之法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916753.md#1">目睹仓鼠死亡时灵魂上升 英女人生从此改观</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890743.md#1">【百年真相】株连六万人 小说成中共内斗“杀器”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917540.md#1">【舞蹈三剑客】神韵艺术家们演出幕后大公开！原来是这样准备</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917131.md#1">【全球新闻】一国两制破产 王沪宁要编对台新论</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916244.md#1">王沪宁接受统战台湾新任务 被指注定失败</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916408.md#1">辽宁铁岭天空出现三个太阳异象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/27/n13916564.md#1">见证南京疫情死亡高峰 市民：简直是场谋杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13916993.md#1">金钟视帝丁强惊传初六骤世 经纪人证实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916305.md#1">周星驰晒写春联视频 贾静雯率先抽中墨宝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916107.md#1">妻怀上二胎 杨祐宁晒超音波照分享喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917383.md#1">因挺白纸革命？女星春夏遭春晚和新片双除名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13916063.md#1">柯佳嬿与许光汉、施柏宇访韩 宣传《想见你》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915759.md#1">传染病专家：中共两大官方新冠数据矛盾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13910160.md#1">每天喝2杯咖啡会增加死亡风险吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915841.md#1">地中海饮食：六度蝉联最佳饮食方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/26/n13915918.md#1">如何找到最佳就寝时间？ 专家提供诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901656.md#1">50岁前退休可能吗？教你9招做好退休准备</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/29/n13917872.htm">罗德岛演出爆满 观众感佩神韵坚守传统文化</a></p><hr>
